Finish port TODOs